--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
+    "react-slidez": "0.0.31",
     "rebass": "^4.0.7",
     "socket.io": "^2.3.0",
     "xoauth2": "^1.2.0"
