--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "axios": "^0.20.0",
     "compression": "^1.7.3",
     "express": "^4.16.4",
+    "fs": "0.0.1-security",
     "history": "^4.9.0",
     "morgan": "^1.9.1",
     "nodemailer": "^6.4.13",
